--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build": "webpack",
-    "start": "node dist/html-app.js",
+    "prebuild": "node dist/html-app.js",
+    "build": "node dist/html-app-routing.js",
+    "postbuild": "Application.js", 
     "dev": "nodemon src/html-app.js"
   },
   "eslintConfig": {
